# trinidad

./: README
avr/compass_gyro/: Makefile  i2c_bitbang.c  i2c_bitbang.h  main.c
avr/compass_gyro/ardlib/: ardlib.c  ardlib.h  cmps03.c  cmps03.h  i2c.c  i2c.h
avr/gps/: Makefile  gps.c  gps.h  main.c
avr/sonicbump/: Makefile  sonicbump.c
lib/MiniURT/: Makefile  NOTICE  deprecated_app.c  example.c  miniurt.c  miniurt.h  private_serial.h  serial.c
lib/MiniURT/docs/: doxyfile
lib/PURT/: Makefile  README  modes.h  namespace.h  raw.h  statedevice_buffer.h  statedevice_direct.h
lib/PURT/src/: datagram.c  datagram.h  raw.c  raw_stdio.c  statedevice_buffer.c  (+4 more)
lib/URT/: .cproject  .project  ArdPort.cpp  ArdPort.h  CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  EventLoop.cpp  EventLoop.h  ExternalProgram.cpp  ExternalProgram.h  FDEvtSource.cpp  FDEvtSource.h  HotDeviceManager.cpp  HotDeviceManager.h  Log.cpp  Log.h  SerialPort.cpp  SerialPort.h  SlottedTimer.cpp  SlottedTimer.h  Socket.cpp  Socket.h  SocketServer.cpp  SocketServer.h  State.cpp  State.h  StateDevice.cpp  StateDevice.h  StateSocket.cpp  StateSocket.h  Timer.cpp  Timer.h  Watchdog.cpp  Watchdog.h  Watchdog2.h  globals.h  tester.cpp  urtexcept.h
lib/URT/contrib/: Ax3500.cpp  Ax3500.h  LMSensors.cpp  LMSensors.h  README  SerLCD.cpp  SerLCD.h
lib/URT/docs/: EvtSourcePtr.cpp  URT.doxyfile
x86/trinidad2/: AutoPilot.cpp  AutoPilot.h  Makefile  Parameters.cpp  Parameters.h  Waypoint.h  camera.cpp  camera.h  config  globals.cpp  globals.h  main.cpp  screen.cpp  screen.h  utilities.cpp  utilities.h
